@@ -27,10 +27,12 @@ from .Piccolo import *
 from .PiccoloDataDir import *
 from .PiccoloSysinfo import *
 from .PiccoloSpectrometer import *
+from .PiccoloScheduler import *
 
 class PiccoloSystem:
     def __init__(self,baseurl):
         self.control = PiccoloControl(baseurl)
+        self.scheduler = PiccoloScheduler(baseurl)
         self.sys = PiccoloSysinfo(baseurl)
         self.spec = PiccoloSpectrometers(baseurl)
         self.data = PiccoloDataDir(baseurl)
