@@ -1,3 +1,8 @@
+2019-07-30 Magnus Hagdorn
+ * piccolo3/client/__init__.py: setup piccolo scheduler
+ * piccolo3/client/PiccoloScheduler.py: add new module to handle piccolo
+   scheduler
+
 2019-05-17 Magnus Hagdorn
  * piccolo3/client/PiccoloSpectrometer.py: observe spectrometer status
 
